--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ section { display: flex; }
 
 .btn { 
     cursor: pointer; 
-    border: none; 
+    border: 0; 
     padding: 6px 12px; 
     border-radius: 3px; 
     line-height: 1.4; 
